force-app/main/default/objects/Opportunity/fields/AccountNameAbb__c.field-meta.xml
<CustomField>
    <fullName>AccountNameAbb__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(  Account.Name , &apos;株式会社&apos;, &apos;（株）&apos;) , &apos;有限会社&apos;, &apos;（有）&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>取引先名（短縮）</label>
    <type>Text</type>
</CustomField>