force-app/main/default/objects/Opportunity/fields/AdditionalSettlementCompleted__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSettlementCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>③追加精算を完了した</label>
    <type>Checkbox</type>
</CustomField>