force-app/main/default/objects/Opportunity/fields/all_Phase__c.field-meta.xml
<CustomField>
    <fullName>all_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>全てのフェーズで通知</label>
    <type>Checkbox</type>
</CustomField>