force-app/main/default/objects/Opportunity/fields/AllInvoicesIssuedToCustomer__c.field-meta.xml
<CustomField>
    <fullName>AllInvoicesIssuedToCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>④顧客に請求書をすべて発行した</label>
    <type>Checkbox</type>
</CustomField>