force-app/main/default/objects/Opportunity/fields/AllMaterialsWarehousedByFactory__c.field-meta.xml
<CustomField>
    <fullName>AllMaterialsWarehousedByFactory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>⑥工場側での材料はすべて入庫を完了した</label>
    <type>Checkbox</type>
</CustomField>