force-app/main/default/objects/Opportunity/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>レポート用項目　￥表示をさせない為の数値項目</description>
    <formula>Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>