force-app/main/default/objects/Opportunity/fields/AmountYen__c.field-meta.xml
<CustomField>
    <fullName>AmountYen__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積金額（￥）</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>