force-app/main/default/objects/Opportunity/fields/AnnualEstimatedProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>AnnualEstimatedProfitAmount__c</fullName>
    <formula>EstimatedAmount__c   *   CW_ProfitRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年間利益想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>