force-app/main/default/objects/Opportunity/fields/ApproximateScale__c.field-meta.xml
<CustomField>
    <fullName>ApproximateScale__c</fullName>
    <label>おおよそ規模</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>