force-app/main/default/objects/Opportunity/fields/arari1__c.field-meta.xml
<CustomField>
    <fullName>arari1__c</fullName>
    <label>粗利（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>