force-app/main/default/objects/Opportunity/fields/BA_AcquisitionDate__c.field-meta.xml
<CustomField>
    <fullName>BA_AcquisitionDate__c</fullName>
    <label>取得時期</label>
    <length>255</length>
    <type>Text</type>
</CustomField>