force-app/main/default/objects/Opportunity/fields/BA_ConstructionPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>BA_ConstructionPeriodEnd__c</fullName>
    <label>施工時期_終了</label>
    <type>Date</type>
</CustomField>