force-app/main/default/objects/Opportunity/fields/BA_ConstructionPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>BA_ConstructionPeriodStart__c</fullName>
    <label>施工時期_開始</label>
    <type>Date</type>
</CustomField>