force-app/main/default/objects/Opportunity/fields/BA_ImpEnd__c.field-meta.xml
<CustomField>
    <fullName>BA_ImpEnd__c</fullName>
    <label>BA実施期間_終了</label>
    <type>Date</type>
</CustomField>