force-app/main/default/objects/Opportunity/fields/BA_ImpStart__c.field-meta.xml
<CustomField>
    <fullName>BA_ImpStart__c</fullName>
    <label>BA実施期間_開始</label>
    <type>Date</type>
</CustomField>