force-app/main/default/objects/Opportunity/fields/BA_No__c.field-meta.xml
<CustomField>
    <fullName>BA_No__c</fullName>
    <label>No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>