force-app/main/default/objects/Opportunity/fields/BA_PropertyList__c.field-meta.xml
<CustomField>
    <fullName>BA_PropertyList__c</fullName>
    <label>物件リスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>