force-app/main/default/objects/Opportunity/fields/BA_SalesUser__c.field-meta.xml
<CustomField>
    <fullName>BA_SalesUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>本営1部担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BA_SalesUsers</relationshipName>
    <type>Lookup</type>
</CustomField>