force-app/main/default/objects/Opportunity/fields/BA_Scope__c.field-meta.xml
<CustomField>
    <fullName>BA_Scope__c</fullName>
    <label>BA対象範囲</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>