force-app/main/default/objects/Opportunity/fields/BA_sesyu__c.field-meta.xml
<CustomField>
    <fullName>BA_sesyu__c</fullName>
    <label>施主</label>
    <length>255</length>
    <type>Text</type>
</CustomField>