force-app/main/default/objects/Opportunity/fields/BA_Status__c.field-meta.xml
<CustomField>
    <fullName>BA_Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>追求（TGTのみ）</fullName>
            </value>
            <value>
                <fullName>追求（協議中）</fullName>
            </value>
            <value>
                <fullName>内定済</fullName>
            </value>
            <value>
                <fullName>失注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>