force-app/main/default/objects/Opportunity/fields/BA_SubPhase__c.field-meta.xml
<CustomField>
    <fullName>BA_SubPhase__c</fullName>
    <label>サブフェーズ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a.未決</fullName>
            </value>
            <value>
                <fullName>b.合意</fullName>
            </value>
            <value>
                <fullName>a.所長</fullName>
            </value>
            <value>
                <fullName>b.着工時期（内装）</fullName>
            </value>
            <value>
                <fullName>c.可能性工事店</fullName>
            </value>
            <value>
                <fullName>d.工事店ステータス</fullName>
            </value>
            <value>
                <fullName>a.BIM提供可否</fullName>
            </value>
            <value>
                <fullName>b.金額・負担</fullName>
            </value>
            <value>
                <fullName>c.カスタマーサクセスの内容</fullName>
            </value>
            <value>
                <fullName>d.効果測定</fullName>
            </value>
            <value>
                <fullName>最終詰め確認</fullName>
            </value>
            <value>
                <fullName>事前準備</fullName>
            </value>
            <value>
                <fullName>a.原案送付</fullName>
            </value>
            <value>
                <fullName>b.GC確認中</fullName>
            </value>
            <value>
                <fullName>c.当方チェック</fullName>
            </value>
            <value>
                <fullName>d.締結</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>