force-app/main/default/objects/Opportunity/fields/BPO__c.field-meta.xml
<CustomField>
    <fullName>BPO__c</fullName>
    <label>作図積算BPO</label>
    <summaryFilterItems>
        <field>JU_ProposedProduct__c.Category__c</field>
        <operation>equals</operation>
        <value>作図積算BPO</value>
    </summaryFilterItems>
    <summaryForeignKey>JU_ProposedProduct__c.Oppotunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>