force-app/main/default/objects/Opportunity/fields/BudgetGrossProfit__c.field-meta.xml
<CustomField>
    <fullName>BudgetGrossProfit__c</fullName>
    <label>予算粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>