force-app/main/default/objects/Opportunity/fields/budgetStage__c.field-meta.xml
<CustomField>
    <fullName>budgetStage__c</fullName>
    <label>フェーズ（追及）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>仕掛</fullName>
            </value>
            <value>
                <fullName>内定</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>