force-app/main/default/objects/Opportunity/fields/calculationMitsumoririeki__c.field-meta.xml
<CustomField>
    <fullName>calculationMitsumoririeki__c</fullName>
    <label>/見積利益額</label>
    <summarizedField>EstimateLog__c.EstimatedProfitAmount__c</summarizedField>
    <summaryForeignKey>EstimateLog__c.Oppestimate__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>