force-app/main/default/objects/Opportunity/fields/COM_OppNameLink__c.field-meta.xml
<CustomField>
    <fullName>COM_OppNameLink__c</fullName>
    <formula>HYPERLINK(&apos;https://forcecom175.lightning.force.com/lightning/r/Opportunity/&apos; + Opp_ID_18__c + &apos;/view&apos; , Name ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>商談名(Link)</label>
    <type>Text</type>
</CustomField>