force-app/main/default/objects/Opportunity/fields/CompetingPatterns__c.field-meta.xml
<CustomField>
    <fullName>CompetingPatterns__c</fullName>
    <label>物件で競合するパターン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>当社_材工</fullName>
            </value>
            <value>
                <fullName>工事失注</fullName>
            </value>
            <value>
                <fullName>そもそも未参入</fullName>
            </value>
            <value>
                <fullName>当社_工のみ</fullName>
            </value>
            <value>
                <fullName>競合_材工</fullName>
            </value>
            <value>
                <fullName>競合_工のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>