force-app/main/default/objects/Opportunity/fields/CompetingPatterns_Competition__c.field-meta.xml
<CustomField>
    <fullName>CompetingPatterns_Competition__c</fullName>
    <label>物件で競合するパターン_競合</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>材工</fullName>
            </value>
            <value>
                <fullName>工のみ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>