force-app/main/default/objects/Opportunity/fields/completion_check_application_status__c.field-meta.xml
<CustomField>
    <fullName>completion_check_application_status__c</fullName>
    <label>完工チェック申請状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未申請</fullName>
                <default>true</default>
                <label>未申請</label>
            </value>
            <value>
                <fullName>申請中</fullName>
            </value>
            <value>
                <fullName>承認中</fullName>
            </value>
            <value>
                <fullName>承認済</fullName>
            </value>
            <value>
                <fullName>却下</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>