force-app/main/default/objects/Opportunity/fields/CompletionCertificateReceived__c.field-meta.xml
<CustomField>
    <fullName>CompletionCertificateReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>①完工証明書を顧客から受領した</label>
    <type>Checkbox</type>
</CustomField>