force-app/main/default/objects/Opportunity/fields/ConflictType__c.field-meta.xml
<CustomField>
    <fullName>ConflictType__c</fullName>
    <label>競合タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>選定同業</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>