force-app/main/default/objects/Opportunity/fields/ContractAmountTargetPriceOrMore__c.field-meta.xml
<CustomField>
    <fullName>ContractAmountTargetPriceOrMore__c</fullName>
    <formula>AND(TEXT(StageName) == &quot;完成&quot;,  ContractAmount__c &gt;= 60000000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請負金額：60,000千円以上</label>
    <type>Checkbox</type>
</CustomField>