force-app/main/default/objects/Opportunity/fields/ContractQuantity__c.field-meta.xml
<CustomField>
    <fullName>ContractQuantity__c</fullName>
    <label>契約数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>