force-app/main/default/objects/Opportunity/fields/ContractUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ContractUnitPrice__c</fullName>
    <defaultValue>75000</defaultValue>
    <label>請負単価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>