force-app/main/default/objects/Opportunity/fields/CS_account_zyutyuubi__c.field-meta.xml
<CustomField>
    <fullName>CS_account_zyutyuubi__c</fullName>
    <label>得意先受注確認日</label>
    <type>Date</type>
</CustomField>