force-app/main/default/objects/Opportunity/fields/CS_Account_zyutyuuzumi__c.field-meta.xml
<CustomField>
    <fullName>CS_Account_zyutyuuzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>得意先受注済み</label>
    <type>Checkbox</type>
</CustomField>