force-app/main/default/objects/Opportunity/fields/CS_annaibi__c.field-meta.xml
<CustomField>
    <fullName>CS_annaibi__c</fullName>
    <label>案内日</label>
    <type>Date</type>
</CustomField>