force-app/main/default/objects/Opportunity/fields/CS_calculationGrossProfitAmount2__c.field-meta.xml
<CustomField>
    <fullName>CS_calculationGrossProfitAmount2__c</fullName>
    <label>採用粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>