force-app/main/default/objects/Opportunity/fields/CS_FollowDate__c.field-meta.xml
<CustomField>
    <fullName>CS_FollowDate__c</fullName>
    <formula>IF ( AND(ISNULL(CW_MaterialDailySalesCalculation__c) ,ISNULL(CS_sittyuubi__c),ISNULL(CS_jyuttyubi__c)),  null  
	,IF ( NOT( ISNULL(CW_MaterialDailySalesCalculation__c) )  ,CW_MaterialDailySalesCalculation__c 
						, IF (  NOT( ISNULL(CS_sittyuubi__c) )  ,CS_sittyuubi__c 
												,IF ( NOT( ISNULL(CS_jyuttyubi__c) )  ,CS_jyuttyubi__c ,null ))))</formula>
    <label>フォロー日</label>
    <type>Date</type>
</CustomField>