force-app/main/default/objects/Opportunity/fields/CS_gouibi__c.field-meta.xml
<CustomField>
    <fullName>CS_gouibi__c</fullName>
    <label>合意日</label>
    <type>Date</type>
</CustomField>