force-app/main/default/objects/Opportunity/fields/CS_jyuttyubi__c.field-meta.xml
<CustomField>
    <fullName>CS_jyuttyubi__c</fullName>
    <label>受注日_CS</label>
    <type>Date</type>
</CustomField>