force-app/main/default/objects/Opportunity/fields/CS_kaitounaiyou__c.field-meta.xml
<CustomField>
    <fullName>CS_kaitounaiyou__c</fullName>
    <label>回答内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>