force-app/main/default/objects/Opportunity/fields/CS_kawakami__c.field-meta.xml
<CustomField>
    <fullName>CS_kawakami__c</fullName>
    <defaultValue>false</defaultValue>
    <label>川上</label>
    <type>Checkbox</type>
</CustomField>