force-app/main/default/objects/Opportunity/fields/CS_kousyoukaisibi__c.field-meta.xml
<CustomField>
    <fullName>CS_kousyoukaisibi__c</fullName>
    <label>交渉開始日</label>
    <type>Date</type>
</CustomField>