force-app/main/default/objects/Opportunity/fields/CS_RecruitmentPrice__c.field-meta.xml
<CustomField>
    <fullName>CS_RecruitmentPrice__c</fullName>
    <label>採用金額_CS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>