force-app/main/default/objects/Opportunity/fields/CS_saiyouarariritu__c.field-meta.xml
<CustomField>
    <fullName>CS_saiyouarariritu__c</fullName>
    <label>採用粗利率</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>