force-app/main/default/objects/Opportunity/fields/CS_saptourokubi__c.field-meta.xml
<CustomField>
    <fullName>CS_saptourokubi__c</fullName>
    <label>SAP登録日</label>
    <type>Date</type>
</CustomField>