force-app/main/default/objects/Opportunity/fields/CS_sittyuubi__c.field-meta.xml
<CustomField>
    <fullName>CS_sittyuubi__c</fullName>
    <label>失注日_CS</label>
    <type>Date</type>
</CustomField>