force-app/main/default/objects/Opportunity/fields/CS_sittyuuriyusyousai__c.field-meta.xml
<CustomField>
    <fullName>CS_sittyuuriyusyousai__c</fullName>
    <label>失注理由詳細_CS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>