force-app/main/default/objects/Opportunity/fields/cs_syodankeikanissuu__c.field-meta.xml
<CustomField>
    <fullName>cs_syodankeikanissuu__c</fullName>
    <formula>TODAY() - RecordingDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日からの経過日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>