force-app/main/default/objects/Opportunity/fields/CS_taioukaisibi__c.field-meta.xml
<CustomField>
    <fullName>CS_taioukaisibi__c</fullName>
    <label>対応開始日</label>
    <type>Date</type>
</CustomField>