force-app/main/default/objects/Opportunity/fields/CS_taioukanryoubi__c.field-meta.xml
<CustomField>
    <fullName>CS_taioukanryoubi__c</fullName>
    <label>対応完了日</label>
    <type>Date</type>
</CustomField>