force-app/main/default/objects/Opportunity/fields/CS_toiawasesyubetsu__c.field-meta.xml
<CustomField>
    <fullName>CS_toiawasesyubetsu__c</fullName>
    <label>問合せ種別_CS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>商流確認</fullName>
            </value>
            <value>
                <fullName>単価問合せ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>