force-app/main/default/objects/Opportunity/fields/CS_tsuikamitumoriteianzumi__c.field-meta.xml
<CustomField>
    <fullName>CS_tsuikamitumoriteianzumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>追加見積提案済み</label>
    <type>Checkbox</type>
</CustomField>