force-app/main/default/objects/Opportunity/fields/CSKPI__c.field-meta.xml
<CustomField>
    <fullName>CSKPI__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &quot;CSWEB&quot;,
    DATEVALUE(CreatedDate),
    CS_jyuttyubi__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSKPI用日付</label>
    <type>Date</type>
</CustomField>