force-app/main/default/objects/Opportunity/fields/CSKPIWONCOUNT__c.field-meta.xml
<CustomField>
    <fullName>CSKPIWONCOUNT__c</fullName>
    <formula>IF(
    AND(
        RecordType.DeveloperName = &quot;CSWEB&quot;,
        ISPICKVAL(StageName, &quot;A (受注)&quot;)
    ),
    1,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSKPI_商談受注実績</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>