force-app/main/default/objects/Opportunity/fields/CurrentPeriod__c.field-meta.xml
<CustomField>
    <fullName>CurrentPeriod__c</fullName>
    <formula>IF(  MONTH( TODAY() ) &gt; 6 
			, YEAR( TODAY() ) - 2023 + 12
			, YEAR( TODAY() ) - 2024 + 12
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当期</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>