force-app/main/default/objects/Opportunity/fields/CW_AccumulationStartDate__c.field-meta.xml
<CustomField>
    <fullName>CW_AccumulationStartDate__c</fullName>
    <label>積算着手日</label>
    <type>Date</type>
</CustomField>