force-app/main/default/objects/Opportunity/fields/CW_bukkensyunkouduki__c.field-meta.xml
<CustomField>
    <fullName>CW_bukkensyunkouduki__c</fullName>
    <label>物件竣工月</label>
    <type>Date</type>
</CustomField>