force-app/main/default/objects/Opportunity/fields/CW_bukkentyakkouduki__c.field-meta.xml
<CustomField>
    <fullName>CW_bukkentyakkouduki__c</fullName>
    <label>物件着工月</label>
    <type>Date</type>
</CustomField>