force-app/main/default/objects/Opportunity/fields/cw_C_AorB__c.field-meta.xml
<CustomField>
    <fullName>cw_C_AorB__c</fullName>
    <label>CからAorBに変更</label>
    <type>Date</type>
</CustomField>