force-app/main/default/objects/Opportunity/fields/cw_ChangeD_CAE__c.field-meta.xml
<CustomField>
    <fullName>cw_ChangeD_CAE__c</fullName>
    <label>D→CAEの変更日</label>
    <type>Date</type>
</CustomField>