force-app/main/default/objects/Opportunity/fields/cw_ckarazikaikakuninbinyuuryoku__c.field-meta.xml
<CustomField>
    <fullName>cw_ckarazikaikakuninbinyuuryoku__c</fullName>
    <label>Cから次回確認日を入力</label>
    <type>Date</type>
</CustomField>