force-app/main/default/objects/Opportunity/fields/CW_ConpleteEstimates__c.field-meta.xml
<CustomField>
    <fullName>CW_ConpleteEstimates__c</fullName>
    <label>見積確認日2</label>
    <type>Date</type>
</CustomField>