force-app/main/default/objects/Opportunity/fields/CW_EstimatedContent__c.field-meta.xml
<CustomField>
    <fullName>CW_EstimatedContent__c</fullName>
    <label>見積内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>