force-app/main/default/objects/Opportunity/fields/cw_insertC_nextday__c.field-meta.xml
<CustomField>
    <fullName>cw_insertC_nextday__c</fullName>
    <label>C→次回確認日</label>
    <type>Date</type>
</CustomField>