force-app/main/default/objects/Opportunity/fields/cw_jissekic__c.field-meta.xml
<CustomField>
    <fullName>cw_jissekic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>売上計画の実績値に1円以上の値が入っている場合True（プロセスビルダー）</description>
    <label>売上実績入力済</label>
    <type>Checkbox</type>
</CustomField>