force-app/main/default/objects/Opportunity/fields/cw_juchizumi__c.field-meta.xml
<CustomField>
    <fullName>cw_juchizumi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注済フラグ</label>
    <type>Checkbox</type>
</CustomField>