force-app/main/default/objects/Opportunity/fields/CW_MaterialDailySalesCalculation__c.field-meta.xml
<CustomField>
    <fullName>CW_MaterialDailySalesCalculation__c</fullName>
    <label>確認日</label>
    <type>Date</type>
</CustomField>