force-app/main/default/objects/Opportunity/fields/CW_Memo__c.field-meta.xml
<CustomField>
    <fullName>CW_Memo__c</fullName>
    <label>特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>