force-app/main/default/objects/Opportunity/fields/cw_mitsumorikakuninbi__c.field-meta.xml
<CustomField>
    <fullName>cw_mitsumorikakuninbi__c</fullName>
    <label>次回確認日</label>
    <type>Date</type>
</CustomField>