force-app/main/default/objects/Opportunity/fields/cw_mitsumoriteisyutukigenbi__c.field-meta.xml
<CustomField>
    <fullName>cw_mitsumoriteisyutukigenbi__c</fullName>
    <label>見積提出期限日</label>
    <type>Date</type>
</CustomField>