force-app/main/default/objects/Opportunity/fields/CW_motouke2__c.field-meta.xml
<CustomField>
    <fullName>CW_motouke2__c</fullName>
    <formula>IF(ISBLANK(property__c),  CW_motouke__c ,   property__r.zyutyusaki__r.Name  )</formula>
    <label>正規化_元請</label>
    <type>Text</type>
</CustomField>