force-app/main/default/objects/Opportunity/fields/CW_motouke__c.field-meta.xml
<CustomField>
    <fullName>CW_motouke__c</fullName>
    <label>元請</label>
    <length>200</length>
    <type>Text</type>
</CustomField>