force-app/main/default/objects/Opportunity/fields/CW_motouke_tantousya2__c.field-meta.xml
<CustomField>
    <fullName>CW_motouke_tantousya2__c</fullName>
    <formula>IF(ISBLANK(property__c),  CW_motouke_tantousya__c  ,  property__r.zyutyusakigenbatantousya__r.seimei__c )</formula>
    <label>正規化_元請担当者</label>
    <type>Text</type>
</CustomField>