force-app/main/default/objects/Opportunity/fields/CW_motouke_tantousya__c.field-meta.xml
<CustomField>
    <fullName>CW_motouke_tantousya__c</fullName>
    <label>元請担当者</label>
    <length>200</length>
    <type>Text</type>
</CustomField>