force-app/main/default/objects/Opportunity/fields/cw_nengetsu_syokaimitsumori__c.field-meta.xml
<CustomField>
    <fullName>cw_nengetsu_syokaimitsumori__c</fullName>
    <formula>TEXT ( YEAR (FirstEstimates__c) ) &amp; &quot;年&quot; &amp; TEXT ( MONTH (FirstEstimates__c)) &amp; &quot;月&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>年月（初回見積り提出日）</label>
    <type>Text</type>
</CustomField>