force-app/main/default/objects/Opportunity/fields/CW_NewInquiriesDate__c.field-meta.xml
<CustomField>
    <fullName>CW_NewInquiriesDate__c</fullName>
    <label>新規問合せ日</label>
    <type>Date</type>
</CustomField>