force-app/main/default/objects/Opportunity/fields/cw_nouhinyoteibi__c.field-meta.xml
<CustomField>
    <fullName>cw_nouhinyoteibi__c</fullName>
    <label>納品予定日</label>
    <type>Date</type>
</CustomField>