force-app/main/default/objects/Opportunity/fields/CW_OwnerMail__c.field-meta.xml
<CustomField>
    <fullName>CW_OwnerMail__c</fullName>
    <label>得意先 所有者Mail_CW</label>
    <type>Email</type>
</CustomField>