force-app/main/default/objects/Opportunity/fields/cw_phase_memo__c.field-meta.xml
<CustomField>
    <fullName>cw_phase_memo__c</fullName>
    <label>フェーズ進捗メモ</label>
    <length>100</length>
    <type>Text</type>
</CustomField>