force-app/main/default/objects/Opportunity/fields/CW_ProfitRate__c.field-meta.xml
<CustomField>
    <fullName>CW_ProfitRate__c</fullName>
    <label>利益率</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>