force-app/main/default/objects/Opportunity/fields/CW_ProposalContent__c.field-meta.xml
<CustomField>
    <fullName>CW_ProposalContent__c</fullName>
    <label>提案内容</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>通常</fullName>
            </value>
            <value>
                <fullName>商流変更</fullName>
            </value>
            <value>
                <fullName>メーカー変更</fullName>
            </value>
            <value>
                <fullName>オリジナル品番化</fullName>
            </value>
            <value>
                <fullName>納まり・仕様変更</fullName>
            </value>
            <value>
                <fullName>VE提案</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>材工提案</fullName>
                <isActive>false</isActive>
                <label>材工提案</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>