force-app/main/default/objects/Opportunity/fields/CW_QuotationRequestDate__c.field-meta.xml
<CustomField>
    <fullName>CW_QuotationRequestDate__c</fullName>
    <label>仕入見積依頼日</label>
    <type>Date</type>
</CustomField>