force-app/main/default/objects/Opportunity/fields/CW_ReplyDeadline__c.field-meta.xml
<CustomField>
    <fullName>CW_ReplyDeadline__c</fullName>
    <label>回答期限</label>
    <type>Date</type>
</CustomField>