force-app/main/default/objects/Opportunity/fields/CW_riekiritsu__c.field-meta.xml
<CustomField>
    <fullName>CW_riekiritsu__c</fullName>
    <formula>arari1__c / Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>利益率_CW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>