force-app/main/default/objects/Opportunity/fields/CW_SalesPlanCreatedFlg__c.field-meta.xml
<CustomField>
    <fullName>CW_SalesPlanCreatedFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <description>売上計画がフローで自動作成された場合はTRUE</description>
    <label>*CSWEB売上計画作成済み</label>
    <type>Checkbox</type>
</CustomField>