force-app/main/default/objects/Opportunity/fields/CW_sekkeikaisya__c.field-meta.xml
<CustomField>
    <fullName>CW_sekkeikaisya__c</fullName>
    <label>設計会社</label>
    <length>200</length>
    <type>Text</type>
</CustomField>