force-app/main/default/objects/Opportunity/fields/CW_sekkeikaisya_tantousya__c.field-meta.xml
<CustomField>
    <fullName>CW_sekkeikaisya_tantousya__c</fullName>
    <label>設計会社担当者</label>
    <length>200</length>
    <type>Text</type>
</CustomField>