force-app/main/default/objects/Opportunity/fields/CW_sesyu2__c.field-meta.xml
<CustomField>
    <fullName>CW_sesyu2__c</fullName>
    <formula>IF(ISBLANK(property__c),  CW_sesyu__c  ,  property__r.CS_sesyu__c  )</formula>
    <label>正規化_施主</label>
    <type>Text</type>
</CustomField>