force-app/main/default/objects/Opportunity/fields/CW_StartMakingQuote__c.field-meta.xml
<CustomField>
    <fullName>CW_StartMakingQuote__c</fullName>
    <label>見積作成着手日</label>
    <type>Date</type>
</CustomField>