force-app/main/default/objects/Opportunity/fields/CW_ThanksPhoneCallDate__c.field-meta.xml
<CustomField>
    <fullName>CW_ThanksPhoneCallDate__c</fullName>
    <label>お礼電話架電日</label>
    <type>Date</type>
</CustomField>