force-app/main/default/objects/Opportunity/fields/CW_ThisTermFirstDate__c.field-meta.xml
<CustomField>
    <fullName>CW_ThisTermFirstDate__c</fullName>
    <formula>if(
month(RecordingDate__c) &lt;= 6, date(year(RecordingDate__c) -1, 7, 1),
date(year(RecordingDate__c), 7, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*今期開始日</label>
    <type>Date</type>
</CustomField>