force-app/main/default/objects/Opportunity/fields/cw_urikeiam__c.field-meta.xml
<CustomField>
    <fullName>cw_urikeiam__c</fullName>
    <label>売上計画（金額）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>