force-app/main/default/objects/Opportunity/fields/depertmentOfFirstEstimates__c.field-meta.xml
<CustomField>
    <fullName>depertmentOfFirstEstimates__c</fullName>
    <label>見積提出時担当部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>