force-app/main/default/objects/Opportunity/fields/DesignConstruction__c.field-meta.xml
<CustomField>
    <fullName>DesignConstruction__c</fullName>
    <label>設計施工</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>○</fullName>
            </value>
            <value>
                <fullName>×</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>