force-app/main/default/objects/Opportunity/fields/EN_Alert_BeforeMonth__c.field-meta.xml
<CustomField>
    <fullName>EN_Alert_BeforeMonth__c</fullName>
    <description>メールアラートのタイミング設定（何ヶ月前希望？）</description>
    <label>アラート(何ヶ月前)_EN</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>