force-app/main/default/objects/Opportunity/fields/EN_Alert_Date__c.field-meta.xml
<CustomField>
    <fullName>EN_Alert_Date__c</fullName>
    <formula>IF ( RecordType.DeveloperName == &apos;en_zenekonsh&apos; ,
  IF ( EN_Alert_BeforeMonth__c != null ,
       ADDMONTHS(en_ukeoityakkouyoteibi__c, -EN_Alert_BeforeMonth__c),
       IF ( en_zyutyuumokuhyougaku__c &gt;= 50000000 ,
            ADDMONTHS(en_ukeoityakkouyoteibi__c, -6),
            ADDMONTHS(en_ukeoityakkouyoteibi__c, -6)
            )
      )
				, null
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アラート日_EN</label>
    <type>Date</type>
</CustomField>