force-app/main/default/objects/Opportunity/fields/EN_AlertTarget__c.field-meta.xml
<CustomField>
    <fullName>EN_AlertTarget__c</fullName>
    <formula>IF (EN_Alert_Date__c ==  TODAY() ,  true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>アラート対象_EN</label>
    <type>Checkbox</type>
</CustomField>